manifests/homelab/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: docker-registry.k8s.array21.dev/bookstack:latest
        volumeMounts:
        - name: bookstack-config
          mountPath: /var/www/bookstack
        ports:
        - name: web
          containerPort: 80
      volumes:
      - name: bookstack-config
        persistentVolumeClaim:
          claimName: bookstack-config
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  type: LoadBalancer
  selector:
    app: bookstack
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - wiki.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: wiki.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
