manifests/homelab/homer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homelab
  labels:
    app: homer
spec:
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      automountServiceAccountToken: false
      containers:
      - name: homer
        image: b4bz/homer:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: homer
          mountPath: /www/assets
      volumes:
      - name: homer
        persistentVolumeClaim:
          claimName: homer
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homelab
spec:
  selector:
    app: homer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: homelab
  annotations:
    kubernets.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:
  tls:
  - hosts:
    - homer.k8s.array21.dev
    secretName: homer-k8s-array21-dev
  rules:
  - host: homer.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer
            port:
              number: 8080
