manifests/homelab/transmision.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: homelab
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 1.1.1.1
        - 9.9.9.9
      automountServiceAccountToken: false
      containers:
      - name: transmission
        image: "haugene/transmission-openvpn:3.7.1"
        ports:
        - containerPort: 9091
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: transmission-data
          mountPath: /data/transmission-home
        - name: transmission-download
          mountPath: /data/completed
      volumes:
      - name: transmission-data
        persistentVolumeClaim:
          claimName: transmission-data
      - name: transmission-download
        persistentVolumeClaim:
          claimName: transmission-download
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: transmission
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homelab
  name: transmission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.10.0.0/16"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:
  tls:
  - hosts:
    - transmission.k8s.array21.dev
    secretName: transmission-k8s-array21-dev
  rules:
  - host: transmission.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port: 
              number: 9091
