manifests/homelab/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: homelab
  labels:
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      automountServiceAccountToken: false
      containers:
      - name: whoami
        image: containous/whoami
        securityContext:
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: homelab
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
spec:
  tls:
  - hosts:
    - whoami.array21.dev
    secretName: whoami-array21-tls
  rules:
    - host: whoami.array21.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
